--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,14 @@
  *= require_tree .
  *= require_self
  */
+
+ html, body, div, nav, ul, li, h1, h2, p {
+     margin: 0;
+     border: 0;
+     padding: 0;
+     font: inherit;
+     text-align: inherit;
+     text-decoration: inherit;
+     color: inherit;
+     background: transparent;
+   }
