--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,7 +14,7 @@
  *= require_self
  */
 
-html, body, div, nav, ul, li, h1, h2, p {
+html, body, div, ul, li, h1, h2, p, a {
   margin: 0;
   border: 0;
   padding: 0;
