start styling, bad internet

--- a/app/assets/stylesheets/header.css
+++ b/app/assets/stylesheets/header.css
@@ -1,4 +1,4 @@
-/*nav {
+nav {
   display: flex;
   justify-content: space-between;
   padding-top: 10px;
@@ -17,4 +17,4 @@ nav li {
 
 nav h1 {
   font-family: 'Limelight', cursive;
-}*/
+}
