splash page- picture with gradient and text

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -24,3 +24,7 @@ html, body, div, ul, li, h1, h2, p, a {
   color: inherit;
   background: transparent;
 }
+
+body {
+  font-family: 'Montserrat', sans-serif;
+}
