--- a/app/assets/stylesheets/auth_form.css
+++ b/app/assets/stylesheets/auth_form.css
@@ -1,7 +1,27 @@
-#auth-form{
-  position: absolute;
-  top: 50%;
-  left: 50%;
+.auth-section {
+  box-sizing: border-box;
+  margin: auto;
+  margin-top: 200px;
+  width: 257px;
   padding: 20px;
-  border: 2px solid black;
+  border: 1px solid black;
+  border-radius: 5px;
+}
+
+.auth-greeting {
+  text-align: center;
+  font-size: 20px;
+}
+
+.auth-errors {
+  color: #B22222;
+  list-style-type: none;
+}
+
+.auth-form {
+  text-align: center;
+}
+
+.auth-input {
+  padding-top: 10px;
 }
