--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,7 +14,7 @@
  *= require_self
  */
 
-html, body, div, ul, li, h1, h2, p, a {
+html, body, div, ul, li, h1, h2, p, a, button {
   margin: 0;
   border: 0;
   padding: 0;
@@ -27,4 +27,5 @@ html, body, div, ul, li, h1, h2, p, a {
 
 body {
   font-family: 'Montserrat', sans-serif;
+  background-color: #FFF5EE;
 }
