--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -1,8 +1,9 @@
 .home {
   position: relative;
   width: 1340px;
+  height: 746px;
   margin: auto;
-  background: -webkit-linear-gradient(right, rgba(0,0,0,0.3), rgba(0,0,0,1));
+  background: -webkit-linear-gradient(right, rgba(0,0,0,0.4), rgba(0,0,0,1));
 }
 
 .home-pic {
@@ -11,8 +12,8 @@
 
 .home p {
   position: absolute;
-  top: 40px;
-  left: 100px;
+  top: 70px;
+  left: 90px;
   font-size: 40px;
   font-weight: bold;
   line-height: 1.5;
