--- a/app/assets/stylesheets/header.css
+++ b/app/assets/stylesheets/header.css
@@ -3,8 +3,8 @@ nav {
   justify-content: space-between;
   padding-top: 7px;
   padding-bottom: 7px;
-  background-color: #B22222;
   color: white;
+  background-color: #B22222;
   max-width: 1341px;
   margin: auto;
 }
@@ -13,8 +13,10 @@ nav ul {
   list-style-type: none;
   display: flex;
 }
+
 nav li {
   padding-right: 10px;
+  padding-left: 10px;
 }
 
 nav li:hover {
@@ -35,5 +37,5 @@ nav h1:hover {
 }
 
 .icon:hover {
-  
+
 }
