--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>BroadwayGenius</title>
+  <title>Spotlight</title>
   <link href="https://fonts.googleapis.com/css?family=Limelight" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet">
   <%= stylesheet_link_tag    'application', media: 'all' %>
