--- a/app/assets/stylesheets/auth_form.css
+++ b/app/assets/stylesheets/auth_form.css
@@ -1,12 +1,12 @@
 .auth-section {
   box-sizing: border-box;
   margin: auto;
-  margin-top: 100px;
   width: 300px;
   padding: 20px;
-  border: 1px solid black;
+  border: 1px solid white;
   border-radius: 5px;
-  background-color: white;
+  background-color: black;
+  color: white;
 }
 
 .auth-greeting {
@@ -31,7 +31,7 @@
 
 .auth-button {
   padding: 5px;
-  border: 1px solid black;
+  border: 1px solid white;
   margin: 5px;
   border-radius: 5px;
 }
@@ -39,4 +39,14 @@
 .auth-button:hover {
   border: 1px solid #B22222;
   color: #B22222;
+}
+
+.auth-greeting img{
+  width:150px;
+  display: block;
+  margin: auto;
+}
+
+.auth-greeting p{
+  font-size: 16px;
 }
