--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,9 @@
   <title>Spotlight</title>
   <link href="https://fonts.googleapis.com/css?family=Limelight" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet">
+  <link rel="icon"
+      type="image/png"
+      href="http://res.cloudinary.com/doepem37s/image/upload/v1478047662/spotlight-icon-black_hi0rv2.png">
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
