--- a/app/assets/stylesheets/header.css
+++ b/app/assets/stylesheets/header.css
@@ -54,3 +54,17 @@ nav h1:hover {
   padding-right: 4px;
   vertical-align: top;
 }
+
+footer {
+  display: flex;
+  background-color: #B22222;
+  justify-content: center;
+}
+
+footer a{
+  padding: 7px;
+}
+
+footer img {
+  width: 25px;
+}
