--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -23,14 +23,15 @@
   position: absolute;
   top: 45px;
   left: 90px;
-  font-size: 60px;
-  line-height: 1.5;
+  font-size: 70px;
+  font-family: 'Limelight', cursive;
+  line-height: 1;
   width: 350px;
 }
 
 .home-top h3 {
   position: absolute;
-  top: 75px;
+  top: 85px;
   left: 90px;
   font-size: 50px;
   line-height: 1.3;
