track show page has lyrics content, need to style

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,7 +14,7 @@
  *= require_self
  */
 
-html, body, div, ul, li, h1, h2, h3, p, a, button {
+html, body, div, ul, li, h1, h2, h3, p, a, button, pre, input, textarea {
   margin: 0;
   border: 0;
   padding: 0;
