--- a/app/assets/stylesheets/album_show.css
+++ b/app/assets/stylesheets/album_show.css
@@ -1,14 +1,14 @@
-.album-splash {
+.show-splash {
   width: 100%;
   height: 200px;
   background-image: url("http://res.cloudinary.com/doepem37s/image/upload/v1478242224/Spotlight/theaterseats.jpg");
-  background-size: contain;
+  background-size: cover;
   overflow: hidden;
   color: white;
   position: relative;
 }
 
-.album-splash h1{
+.show-splash h1{
   font-family: 'Limelight', cursive;
   font-size: 40px;
   position: absolute;
@@ -16,7 +16,7 @@
   left: 50px;
 }
 
-.album-info {
+.show-info {
   position: absolute;
   top: 70px;
   left: 50px;
