--- a/app/assets/stylesheets/album_show.css
+++ b/app/assets/stylesheets/album_show.css
@@ -26,21 +26,26 @@
 }
 
 .album-art {
-  float: left;
+  float: right;
   width: 40%;
+  height: auto;
+  display: flex;
+  justify-content: center;
 }
 
 .album-art img{
   width: 75%;
+  margin: auto;
 }
 
 .album-tracks-container {
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
+  margin-bottom: 20px;
 }
 
 .album-track-list {
-  float: right;
+  float: left;
   width: 90%;
   margin-top: 20px;
 }
@@ -65,4 +70,60 @@
 
 .album-track-list p{
   font-size: 15px;
+}
+
+.no-track-form {
+  text-align: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.track-form {
+  width: 80%;
+  margin: auto;
+  border: 2px solid black;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.track-form h2{
+  font-size: 24px;
+  font-weight: bold;
+  margin-top: 10px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.track-form label {
+  font-size: 18px;
+  width: 300px;
+  font-weight: bold;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.track-form-input {
+  margin: 5px;
+  border: 1px solid black;
+}
+
+.track-form-lyrics textarea {
+  border: 1px solid black;
+  width: 100%;
+  height: 200px;
+}
+
+.track-form-button {
+  margin: auto;
+  border: 1px solid black;
+  border-radius: 5px;
+  margin-bottom: 7px;
+}
+
+.track-errors {
+  color: #B22222;
+  margin: auto;
 }
