--- a/app/assets/stylesheets/track_show.css
+++ b/app/assets/stylesheets/track_show.css
@@ -1,9 +1,36 @@
+.track-splash {
+  width: 100%;
+  height: 200px;
+  background-image: url("http://res.cloudinary.com/doepem37s/image/upload/v1478242224/Spotlight/theaterseats.jpg");
+  background-size: cover;
+  overflow: hidden;
+  color: white;
+  position: relative;
+}
+
+.track-splash h1{
+  font-family: 'Limelight', cursive;
+  font-size: 40px;
+  position: absolute;
+  top: 30px;
+  left: 50px;
+}
+
+.track-info {
+  position: absolute;
+  top: 80px;
+  left: 50px;
+  font-weight: bold;
+  font-size: 20px;
+  width: 90%;
+}
+
 .track-body {
-  width: 70%;
+  width: 60%;
 }
 
 .track-lyrics {
-  padding: 10px;
+  padding: 25px;
 }
 
 .back-to-album:hover {
