--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -48,10 +48,13 @@
 }
 
 #home-albums h2 {
-  background-color: black;
   color: white;
   text-align: center;
   font-weight: bold;
   font-size: 30px;
   padding: 10px;
+}
+
+#home-albums {
+  background-color: black;
 }
