--- a/app/assets/stylesheets/album_show.css
+++ b/app/assets/stylesheets/album_show.css
@@ -117,9 +117,13 @@
   border: 1px solid black;
   width: 100%;
   background-color: #FFF5EE;
+  color: black;
+  padding: 5px;
 }
 
 .track-form-lyrics textarea {
+  padding: 5px;
+  color: black;
   border: 1px solid black;
   width: 100%;
   height: 300px;
