--- a/app/assets/stylesheets/comments.css
+++ b/app/assets/stylesheets/comments.css
@@ -57,3 +57,12 @@
 .comments-index p {
   font-size: 25px;
 }
+
+.comment-header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.comment-delete img{
+  width: 15px;
+}
