--- a/app/assets/stylesheets/album_show.css
+++ b/app/assets/stylesheets/album_show.css
@@ -91,14 +91,15 @@
   width: 70%;
   margin: auto;
   border-radius: 10px;
-  border: 2px solid black;
-  background-color: #4c4c4c;
+  /*border: 2px solid black;*/
+  background-color: #BFBFBF;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
   justify-content: center;
   margin-top: 20px;
   margin-bottom: 20px;
+  color: black;
 }
 
 .track-form h2{
@@ -118,7 +119,7 @@
 
 .track-form-input {
   margin: 5px;
-  /*border: 1px solid black;*/
+  border: 1px solid black;
   width: 100%;
   background-color: #FFF5EE;
   color: black;
@@ -128,7 +129,7 @@
 .track-form-lyrics textarea {
   padding: 5px;
   color: black;
-  /*border: 1px solid black;*/
+  border: 1px solid black;
   width: 100%;
   height: 300px;
   background-color: #FFF5EE;
