--- a/app/assets/stylesheets/annotations.css
+++ b/app/assets/stylesheets/annotations.css
@@ -1,10 +1,10 @@
-.no-comment-form {
+.no-annotation-form {
   text-align: center;
   padding-top: 10px;
   padding-bottom: 10px;
 }
 
-.comment-form {
+.annotation-form {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -15,13 +15,13 @@
   margin: auto;
 }
 
-.comment-form h2 {
+.annotation-form h2 {
   font-size: 20px;
   font-weight: bold;
   margin: 10px;
 }
 
-.comment-form-body {
+.annotation-form-body {
   width:80%;
   height: 100px;
   background-color: white;
@@ -29,25 +29,25 @@
   padding: 10px;
 }
 
-.comment-form button {
+.annotation-form button {
   padding: 5px;
   border-radius: 5px;
   border: 2px solid white;
 }
 
-.comment-form button:hover {
+.annotation-form button:hover {
   border-color: black;
   color: black;
 }
 
-.comments-index {
+.annotation-show {
   display: flex;
   flex-direction: column-reverse;
   align-items: center;
   margin: 20px;
 }
 
-.comments-index li {
+.annotation-show {
   background-color: black;
   color: white;
   border: 1px solid white;
@@ -55,20 +55,20 @@
   padding: 5px;
 }
 
-.comment-username {
+.annotation-username {
   font-size: 15px;
   font-weight: bold;
 }
 
-.comments-index p {
+.annotation-show p {
   font-size: 25px;
 }
 
-.comment-header {
+.annotation-header {
   display: flex;
   justify-content: space-between;
 }
 
-.comment-delete img{
+.annotation-delete img{
   width: 15px;
 }
