--- a/app/assets/stylesheets/annotations.css
+++ b/app/assets/stylesheets/annotations.css
@@ -10,7 +10,7 @@
   align-items: center;
   background-color: #B22222;
   color: white;
-  width: 70%;
+  width: 85%;
   border-radius: 10px;
   margin: auto;
 }
@@ -42,9 +42,10 @@
 
 .annotation-show {
   display: flex;
-  flex-direction: column-reverse;
+  flex-direction: column;
   align-items: center;
   margin: 20px;
+  border-radius: 10px;
 }
 
 .annotation-show {
@@ -70,5 +71,9 @@
 }
 
 .annotation-delete img{
+  width: 15px;
+}
+
+.upvote-button {
   width: 15px;
 }
