fix upvote images, annotations render at appropriate height for click

--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -16,7 +16,7 @@
   width: 100%;
   min-height: 580px;
   opacity: 0.3;
-  background-image: url("http://res.cloudinary.com/doepem37s/image/upload/v1478043010/broadway_wsfzku.jpg");
+  background-image: url("https://res.cloudinary.com/doepem37s/image/upload/v1478043010/broadway_wsfzku.jpg");
 }
 
 .home-top h2 {
