--- a/app/assets/stylesheets/annotations.css
+++ b/app/assets/stylesheets/annotations.css
@@ -44,7 +44,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 20px;
+  /*margin: 20px;*/
   border-radius: 10px;
 }
 
@@ -61,11 +61,8 @@
   font-weight: bold;
 }
 
-.annotation-show p {
-  font-size: 25px;
-}
-
 .annotation-header {
+  width: 95%;
   display: flex;
   justify-content: space-between;
 }
@@ -74,6 +71,30 @@
   width: 15px;
 }
 
+.annotation-header nav {
+  width: 40px;
+  margin: 0;
+  padding: 0;
+  height: 20px;
+}
+
+.annotation-body {
+  width: 85%;
+  font-size: 20px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.annotation-footer {
+  width: 100%;
+}
+
 .upvote-button {
   width: 15px;
+}
+
+.upvotes {
+  margin-left: 15px;
+  margin-bottom: 10px;
+  float: left;
 }
