fix bug where annotation state was over all of the annotations on the page

--- a/app/assets/stylesheets/track_show.css
+++ b/app/assets/stylesheets/track_show.css
@@ -59,3 +59,8 @@
 .track-lyrics .highlight:hover {
   background-color: #ffff7f;
 }
+
+.track-body h4{
+  margin-left: 25px;
+  margin-bottom: 0;
+}
