fix console errors from using SmartTimeAgo by switching to TimeAgo

--- a/app/assets/stylesheets/track_show.css
+++ b/app/assets/stylesheets/track_show.css
@@ -1,7 +1,7 @@
 .track-splash {
   width: 100%;
   height: 200px;
-  background-image: url("http://res.cloudinary.com/doepem37s/image/upload/v1478242224/Spotlight/theaterseats.jpg");
+  background-image: url("https://res.cloudinary.com/doepem37s/image/upload/v1478242224/Spotlight/theaterseats.jpg");
   background-size: cover;
   overflow: hidden;
   color: white;
