--- a/app/assets/stylesheets/album_show.css
+++ b/app/assets/stylesheets/album_show.css
@@ -7,7 +7,7 @@
 .show-splash {
   width: 100%;
   height: 230px;
-  background-image: url("http://res.cloudinary.com/doepem37s/image/upload/v1478242224/Spotlight/theaterseats.jpg");
+  background-image: url("https://res.cloudinary.com/doepem37s/image/upload/v1478242224/Spotlight/theaterseats.jpg");
   background-size: cover;
   overflow: hidden;
   color: white;
