attempt at sticky footer, need bigger screen to test

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -52,3 +52,9 @@ input, button, textarea {
 button:hover{
   cursor: pointer;
 }
+
+.holy_grail {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
