fix annotations to highlight all associated lines on hover

--- a/app/assets/stylesheets/track_show.css
+++ b/app/assets/stylesheets/track_show.css
@@ -56,12 +56,12 @@
   position: absolute;
 }
 
-.track-lyrics .highlight {
+.highlight {
   background-color: #CDCDCD;
   cursor: pointer;
 }
 
-.track-lyrics .highlight:hover {
+.highlight:hover {
   background-color: #ffff7f;
 }
 
