--- a/app/assets/stylesheets/track_show.css
+++ b/app/assets/stylesheets/track_show.css
@@ -6,8 +6,8 @@
 
 .annotation-screenshot {
   width: 100%;
-  min-height: 184px;
-  background-image: url('http://res.cloudinary.com/doepem37s/image/upload/c_scale,w_400/v1480146885/Spotlight/spotlight-trackshow.png');
+  min-height: 292px;
+  background-image: url('http://res.cloudinary.com/doepem37s/image/upload/c_scale,w_400/v1480224396/Spotlight/annotation.gif');
   background-size: cover;
 }
 
