--- a/app/assets/stylesheets/header.css
+++ b/app/assets/stylesheets/header.css
@@ -15,8 +15,9 @@ nav ul {
 }
 
 nav li {
+  font-size: 18px;
   padding-right: 10px;
-  padding-left: 10px;
+  padding-left: 4px;
   position: relative;
 }
 
@@ -68,7 +69,11 @@ nav .dropdown-header {
 }
 
 .nav-dropdown li{
-  padding-bottom: 3px;
+  padding-bottom: 5px;
+  border-bottom: 1px solid white;
+}
+.nav-dropdown li:last-child{
+  border-bottom: 0;
 }
 
 .header-prof-pic{
