change annotation modal to bouncing squares, change comment css

--- a/app/assets/stylesheets/comments.css
+++ b/app/assets/stylesheets/comments.css
@@ -8,23 +8,15 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #B22222;
-  color: white;
-  width: 70%;
-  border-radius: 10px;
+  width: 100%;
   margin: auto;
-}
-
-.comment-form h2 {
-  font-size: 20px;
-  font-weight: bold;
-  margin: 10px;
 }
 
 .comment-form-body {
   width:80%;
-  height: 100px;
+  min-height: 30px;
   background-color: white;
+  border: 1px solid #888888;
   color: black;
   padding: 10px;
 }
@@ -32,19 +24,20 @@
 .comment-form button {
   padding: 5px;
   border-radius: 5px;
-  border: 2px solid white;
+  color: #888888;
+  border: 1px solid #888888;
 }
 
 .comment-form button:hover {
-  border-color: black;
-  color: black;
+  border-color: #B22222;
+  color: #B22222;
 }
 
 .comments-index {
   display: flex;
   flex-direction: column-reverse;
   align-items: center;
-  margin: 20px;
+  margin-bottom: 20px;
 }
 
 .comments-index li {
@@ -71,6 +64,10 @@
 
 .comment-delete img{
   width: 15px;
+}
+
+.comment-body {
+
 }
 
 p .login-link:hover {
