--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -101,17 +101,17 @@
 }
 
 .exp-comment-img {
-  background-image: url('http://res.cloudinary.com/doepem37s/image/upload/c_scale,w_450/v1480149987/Spotlight/stage-door-2.jpg');
+  background-image: url('https://res.cloudinary.com/doepem37s/image/upload/c_scale,w_450/v1480149987/Spotlight/stage-door-2.jpg');
   height: 250px;
 }
 
 .exp-annot-img {
   height: 260px;
-  background-image: url('http://res.cloudinary.com/doepem37s/image/upload/c_scale,w_400/v1480150947/Spotlight/600x390.jpg');
+  background-image: url('https://res.cloudinary.com/doepem37s/image/upload/c_scale,w_400/v1480150947/Spotlight/600x390.jpg');
 }
 
 .exp-track-img {
-  background-image: url('http://res.cloudinary.com/doepem37s/image/upload/c_scale,w_400/v1480224396/Spotlight/annotation.gif');
+  background-image: url('https://res.cloudinary.com/doepem37s/image/upload/c_scale,w_400/v1480224396/Spotlight/annotation.gif');
   height: 290px;
 }
 
