--- a/app/assets/stylesheets/album_show.css
+++ b/app/assets/stylesheets/album_show.css
@@ -68,7 +68,8 @@
 }
 
 .album-track-list li:hover {
-  background-color: #B22222;
+  outline: 3px solid #B22222;
+  color: #B22222;
 }
 
 .album-track-list h3 {
@@ -89,8 +90,7 @@
 .track-form {
   width: 70%;
   margin: auto;
-  border-radius: 10px;
-  /*border: 2px solid black;*/
+  border-radius: 5px;
   background-color: #BFBFBF;
   box-sizing: border-box;
   display: flex;
@@ -98,27 +98,17 @@
   justify-content: center;
   margin-top: 20px;
   margin-bottom: 20px;
-  color: black;
-}
-
-.track-form h2{
-  font-size: 24px;
-  font-weight: bold;
-  margin-top: 10px;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .track-form label {
   font-size: 18px;
-  width: 85%;
+  width: 90%;
   font-weight: bold;
   margin: auto;
 }
 
 .track-form-input {
-  margin: 5px;
-  border: 1px solid black;
+  margin-top: 10px;
   width: 100%;
   background-color: #FFF5EE;
   color: black;
@@ -126,19 +116,19 @@
 }
 
 .track-form-lyrics textarea {
-  padding: 5px;
   color: black;
-  border: 1px solid black;
+  margin-top: 10px;
+  padding: 5px;
   width: 100%;
   height: 300px;
   background-color: #FFF5EE;
 }
 
 .track-form-button {
-  color: black;
-  background-color: white;
+  color: white;
   margin: auto;
-  border: 2px solid black;
+  margin-bottom: 10px;
+  border: 2px solid white;
   border-radius: 5px;
   padding: 7px;
   font-weight: bold;
