--- a/app/assets/stylesheets/profile.css
+++ b/app/assets/stylesheets/profile.css
@@ -120,7 +120,6 @@
 }
 
 .contribution-list li {
-  /*border: 1px solid black;*/
   background-color: white;
   color: black;
   padding: 5px;
@@ -130,6 +129,7 @@
 
 .contribution-list li:hover{
   color: #B22222;
+  outline: 3px solid #B22222;
 }
 
 .contribution-title {
