--- a/app/assets/stylesheets/album_show.css
+++ b/app/assets/stylesheets/album_show.css
@@ -128,7 +128,7 @@
   color: white;
   margin: auto;
   margin-bottom: 10px;
-  border: 2px solid white;
+  border: 1px solid white;
   border-radius: 5px;
   padding: 7px;
   font-weight: bold;
@@ -136,7 +136,7 @@
 
 .track-form-button:hover {
   color: #B22222;
-  border: 2px solid #B22222;
+  border-color: #B22222;
 }
 
 .track-errors {
