--- a/app/assets/stylesheets/comments.css
+++ b/app/assets/stylesheets/comments.css
@@ -26,6 +26,8 @@
   border-radius: 5px;
   color: #888888;
   border: 1px solid #888888;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .comment-form button:hover {
