--- a/app/assets/stylesheets/annotations.css
+++ b/app/assets/stylesheets/annotations.css
@@ -5,34 +5,28 @@
 }
 
 .annotation-form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: #BFBFBF;
+  border-left: 5px solid black;
   color: white;
   width: 85%;
-  border-radius: 10px;
   margin: auto;
-  /*border: 1px solid #BFBFBF;*/
 }
 
 .annotation-form-body {
   width:80%;
   height: 100px;
-  background-color: white;
-  /*border: 1px solid #BFBFBF;*/
+  border: 1px solid black;
   color: black;
-  margin-top: 20px;
+  margin: 20px;
   padding: 10px;
 }
 
 .annotation-form button {
   padding: 5px;
   border-radius: 5px;
-  border: 1px solid white;
-  color: white;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  border: 1px solid black;
+  color: black;
+  margin-left: 20px;
+  margin-bottom: 20px;
 }
 
 .annotation-form button:hover {
@@ -44,13 +38,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  border-radius: 10px;
+  border-radius: 5px;
 }
 
 .annotation-show {
   background-color: black;
   color: white;
-  border: 1px solid white;
   width: 80%;
   padding: 5px;
 }
