--- a/app/assets/stylesheets/track_show.css
+++ b/app/assets/stylesheets/track_show.css
@@ -1,16 +1,3 @@
-.track-explain-modal {
-  font-size: 16px;
-  color: black;
-  text-align: center;
-}
-
-.annotation-screenshot {
-  width: 100%;
-  min-height: 292px;
-  background-image: url('https://res.cloudinary.com/doepem37s/image/upload/c_scale,w_400/v1480224396/Spotlight/annotation.gif');
-  background-size: cover;
-}
-
 .track-show {
   background-color: #FFF5EE;
 }
@@ -74,17 +61,19 @@ pre {
 }
 
 .explain {
-  background-color: #FFF5EE;
+  background-color: #888888;
+  color: white;
+  font-weight: bold;
   position: fixed;
   top: 260px;
   left: 40%;
-  width: 170px;
+  width: 150px;
   padding: 10px;
-  border: 1px solid black;
+  /*border: 1px solid black;*/
   border-radius: 5px;
   /*box-shadow: 5px 5px 5px #888888;*/
   -webkit-animation-name: bounce;
-  animation: bounce 2s infinite;
+  animation: bounce 2s 2;
 }
 
 .highlight {
