--- a/app/assets/stylesheets/album_show.css
+++ b/app/assets/stylesheets/album_show.css
@@ -56,19 +56,18 @@
 .album-track-list {
   float: left;
   width: 65%;
-  min-width: 400px;
+  max-width: 450px;
   margin-top: 10px;
 }
 
 .album-track-list li {
-  background-color: #FFF5EE;
-  color: black;
-  text-align: center;
-  margin-bottom: 12px;
+  border-left: 5px solid #FFF5EE;
+  padding-left: 10px;
+  margin-bottom: 15px;
 }
 
 .album-track-list li:hover {
-  outline: 3px solid #B22222;
+  border-left: 5px solid #B22222;
   color: #B22222;
 }
 
