--- a/app/assets/stylesheets/album_show.css
+++ b/app/assets/stylesheets/album_show.css
@@ -51,12 +51,11 @@
 
 .album-tracks-container h2{
   font-size: 30px;
+  font-weight: bold;
 }
 
 .album-track-list {
-  float: left;
-  width: 65%;
-  max-width: 450px;
+  width: 70%;
   margin-top: 10px;
 }
 
@@ -89,38 +88,29 @@
 .track-form {
   width: 70%;
   margin: auto;
-  border-radius: 5px;
-  background-color: #BFBFBF;
   box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
   margin-top: 20px;
   margin-bottom: 20px;
 }
 
-.track-form label {
-  font-size: 18px;
-  width: 90%;
+.track-form-title {
+  font-size: 30px;
   font-weight: bold;
-  margin: auto;
+  margin-bottom: 15px;
 }
 
 .track-form-input {
-  margin-top: 10px;
+  margin-bottom: 10px;
   width: 100%;
-  background-color: #FFF5EE;
-  color: black;
+  color: white;
   padding: 5px;
+  border: 1px solid white;
+  border-radius: 5px;
 }
 
-.track-form-lyrics textarea {
-  color: black;
-  margin-top: 10px;
-  padding: 5px;
+.track-form-lyrics{
   width: 100%;
   height: 300px;
-  background-color: #FFF5EE;
 }
 
 .track-form-button {
