--- a/app/assets/stylesheets/annotations.css
+++ b/app/assets/stylesheets/annotations.css
@@ -38,14 +38,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  border-radius: 5px;
-}
-
-.annotation-show {
-  background-color: black;
-  color: white;
+  border-left: 5px solid black;
   width: 80%;
   padding: 5px;
+}
+
+.annotation-show img {
+  margin-right: 3px;
 }
 
 .annotation-username {
@@ -64,15 +63,17 @@
 }
 
 .annotation-header nav {
+  line-height: 0;
   width: 40px;
   margin: 0;
   padding: 0;
   height: 20px;
+  background-color: #FFF5EE;
 }
 
 .annotation-body {
-  width: 85%;
-  font-size: 20px;
+  width: 95%;
+  font-size: 18px;
   margin-top: 10px;
   margin-bottom: 10px;
 }
@@ -84,13 +85,15 @@
 .upvote-button {
   width: 15px;
   height: 15px;
-  background-image: url("https://res.cloudinary.com/doepem37s/image/upload/c_scale,w_15/v1478626744/Spotlight/Thumbsup-Icon.png");
+  margin-right: 3px;
+  background-image: url("https://res.cloudinary.com/doepem37s/image/upload/c_scale,w_15/v1481601478/Spotlight/shapes.png");
 }
 
 .unvote-button {
   width: 15px;
   height: 15px;
-  background-image: url("https://res.cloudinary.com/doepem37s/image/upload/c_scale,w_15/v1478731204/Spotlight/Thumbsup-Icon-red.png");
+  margin-right: 3px;
+  background-image: url("https://res.cloudinary.com/doepem37s/image/upload/c_scale,w_15/v1481601478/Spotlight/heart-red.png");
 }
 
 .upvotes {
