add more seeds, change album-track list and contribution list, need to fix last-child of contribution list

--- a/app/assets/stylesheets/album_show.css
+++ b/app/assets/stylesheets/album_show.css
@@ -56,13 +56,17 @@
 
 .album-track-list {
   width: 70%;
+  margin-bottom: 10px;
+  border-top: 1px solid white;
   margin-top: 10px;
 }
 
 .album-track-list li {
-  border-left: 5px solid #FFF5EE;
   padding-left: 10px;
-  margin-bottom: 15px;
+  padding-bottom: 10px;
+  padding-top: 10px;
+  border-left: 5px solid black;
+  border-bottom: 1px solid white;
 }
 
 .album-track-list li:hover {
