--- a/app/assets/stylesheets/profile.css
+++ b/app/assets/stylesheets/profile.css
@@ -100,7 +100,7 @@
 
 .contribution-list {
   background-color: #ccc;
-  padding-top: 15px;
+  padding-top: 10px;
   margin-right: 15px;
   margin-bottom: 20px;
   max-width: 510px;
@@ -110,15 +110,21 @@
   width:85%;
   max-width: 450px;
   margin: auto;
-  margin-top: 15px;
+  padding-bottom: 10px;
 }
 
 .contribution-list li {
   color: black;
-  border-left: 5px solid black;
-  padding: 5px;
-  margin-bottom: 15px;
+  border-left: 5px solid #ccc;
+  padding-left: 5px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid black;
 }
+
+/*.contribution-list li:last-of-type {
+  border-bottom: none;
+}*/
 
 .contribution-list li:hover{
   color: #B22222;
